--- a/UDPTests/CamReceive/CMakeLists.txt
+++ b/UDPTests/CamReceive/CMakeLists.txt
@@ -7,5 +7,5 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
 find_package(OpenCV REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS})
 
-add_executable(CannyDetector_demo CannyDetector_demo.cpp sobol.cpp)
-target_link_libraries(CannyDetector_demo ${OpenCV_LIBS})
+add_executable(CannyDetector_demo CannyDetector_demo.cpp sobol.cpp gamepad.c)
+target_link_libraries(CannyDetector_demo ${OpenCV_LIBS} udev)
