compression and proper threading

--- a/UDPTests/CamSendThreaded/CMakeLists.txt
+++ b/UDPTests/CamSendThreaded/CMakeLists.txt
@@ -8,4 +8,4 @@ find_package(OpenCV REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS})
 
 add_executable(CannyDetector_demo CannyDetector_demo.cpp sobol.cpp)
-target_link_libraries(CannyDetector_demo ${OpenCV_LIBS})
+target_link_libraries(CannyDetector_demo ${OpenCV_LIBS} ${CMAKE_SOURCE_DIR}/libimagequant.a m)
